--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_svg: ^2.0.7
   flutter_plugin_android_lifecycle: ^2.0.15
   geocoding: ^2.1.0
+  upgrader: ^8.0.0
 
 dev_dependencies:
   flutter_test:
